--- a/register.html
+++ b/register.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registrations</title>
+</head>
+<body>
+    <h1>Registrations</h1>
+    <h3>Click the link below to start the registration process:</h3>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScHq3qfrm86HIcKmuWbU_1-YxDDS8D9mvYYKJmU_ldiM7Rk3g/viewform">Register Now!</a>
+</body>
+</html>
