--- a/rulesandregs.html
+++ b/rulesandregs.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1> Rules and Regulations </h1>
+    <a> 
+        1. The participants can create their project using any technology they want including but not limited to: Machine learning, AI, App development, IoT, Robotics etc.
+        2. If hardware components are being used, the participants must procure the required equipment themselves.
+        3. Usage of any paid API is not permitted.
+        4. Participants will not be allowed to use any prewritten code.
+        5. Plagiarism is not allowed in any case; it will cause the entire team to be disqualified.
+        6. Participants WILL NOT be allowed to work on their projects before the competition
+    </a>
 </body>
 </html>
