--- a/rules.html
+++ b/rules.html
@@ -3,16 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rules and Regulations</title>
+    <title>Hackathon Rules</title>
+    <link rel="stylesheet" href="rules.css">
 </head>
 <body>
-    <h1> Rules and Regulations </h1>
-    <a> 1. The participants can create their project using any technology they want including but not limited to: Machine learning, AI, App development, IoT, Robotics etc.
-        <br> 2. If hardware components are being used, the participants must procure the required equipment themselves.
-        <br> 3. Usage of any paid API is not permitted.
-        <br> 4. Participants will not be allowed to use any prewritten code.
-        <br> 5. Plagiarism is not allowed in any case; it will cause the entire team to be disqualified.
-        <br> 6. Participants WILL NOT be allowed to work on their projects before the competition
-    </a>
+    <div class="rules-container">
+        <h2>Hackathon Rules</h2>
+        <div class="rule-item">
+            <h3>Rule 1: Technology Choice</h3>
+            <p>The participants can create their project using any technology they want including but not limited to: Machine learning, AI, App development, IoT, Robotics etc.</p>
+        </div>
+        <div class="rule-item">
+            <h3>Rule 2: Hardware Components</h3>
+            <p>If hardware components are being used, the participants must procure the required equipment themselves.</p>
+        </div>
+        <div class="rule-item">
+            <h3>Rule 3: API Usage</h3>
+            <p>Usage of any paid API is not permitted.</p>
+        </div>
+        <div class="rule-item">
+            <h3>Rule 4: Prewritten Code</h3>
+            <p>Participants will not be allowed to use any prewritten code.</p>
+        </div>
+        <div class="rule-item">
+            <h3>Rule 5: Plagiarism</h3>
+            <p>Plagiarism is not allowed in any case; it will cause the entire team to be disqualified.</p>
+        </div>
+        <div class="rule-item">
+            <h3>Rule 6: Project Work</h3>
+            <p>Participants WILL NOT be allowed to work on their projects before the competition.</p>
+        </div>
+    </div>
 </body>
 </html>
