--- a/rules.html
+++ b/rules.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hackathon Rules</title>
-    <link rel="stylesheet" href="rules.css">
+    <link rel="stylesheet" href="styles-rules.css">
 </head>
 <body>
     <div class="rules-container">
