--- a/rules.html
+++ b/rules.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hackathon Rules</title>
+    <title>Rules and Regulations</title>
+
     <link rel="stylesheet" href="./assets/styles-rules.css">
+
 </head>
+
 <body>
+    <!-- Header -->
+     <header class="navbar">
+        <div class="container">
+            <a href="/" class="logo">
+                <img src="./assets/synthacks_logo-transparent.png" alt="logo">
+                <span>GWH SYNTHACKS 2024</span>
+            </a>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="./rules.html">Rules and Regulations</a>
+                    </li>
+                    <li>
+                        <a href="./register.html">Registrations</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="./about.html">
+                            <span>About</span>
+                            <i class="fa-solid fa-angle-down"></i>
+                        </a>
+                        <div class="dropdown-cont">
+                            <ul>
+                                <li>
+                                    <a href="./members.html">OC Members</a>
+                                </li>
+                                <li>
+                                    <a href="./schedule.html">Event Schedule</a>
+                                </li>
+                                <li>
+                                    <a href="./album.html">Album</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div class="rules-container">
         <h2>Hackathon Rules</h2>
         <div class="rule-item">
@@ -34,5 +79,8 @@
             <p>Participants WILL NOT be allowed to work on their projects before the competition.</p>
         </div>
     </div>
+    <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
+    <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
