--- a/rules.html
+++ b/rules.html
@@ -52,7 +52,7 @@
             </nav>
         </div>
     </header>
-    <div class="rules-container">
+    <div class="rules-content">
         <h2>Hackathon Rules</h2>
             <h3>Rule 1: Technology Choice</h3>
             <p>The participants can create their project using any technology they want including but not limited to: Machine learning, AI, App development, IoT, Robotics etc.</p>
