--- a/register.html
+++ b/register.html
@@ -54,6 +54,33 @@
     </header>
     <section class="body">
         <h1>Registrations</h1>
+        <head>
+    <style>
+        table {
+            width: 50%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 15px;
+            text-align: left;
+        }
+    </style>
+</head>
+<body>
+
+<table>
+    <tr>
+        <td>Junior Category</td>
+        <td>6th - 8th</td>
+    </tr>
+    <tr>
+        <td>Senior Category</td>
+        <td>9th - 12th</td>
+    </tr>
+</table>
         <h3>Click the link below to start the registration process:</h3>
         <button class="btn-purple" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScHq3qfrm86HIcKmuWbU_1-YxDDS8D9mvYYKJmU_ldiM7Rk3g/viewform'">Register Now!</button>
     </section>
