--- a/register.html
+++ b/register.html
@@ -57,15 +57,15 @@
         <head>
     <style>
         table {
-            width: 50%;
+            width: 30%;
             border-collapse: collapse;
         }
         table, th, td {
-            border: 1px solid black;
+            border: 1px white;
         }
         th, td {
             padding: 15px;
-            text-align: left;
+            text-align: center;
         }
     </style>
 </head>
