--- a/register.html
+++ b/register.html
@@ -61,7 +61,7 @@
             border-collapse: collapse;
         }
         table, th, td {
-            border: 1px white;
+            border: 1px solid black;
         }
         th, td {
             padding: 15px;
