--- a/register.html
+++ b/register.html
@@ -54,6 +54,7 @@
     </header>
     <section class="body">
         <h1>Registrations</h1>
+        <h2> Eligibility Criteria and Age Categories</h2> 
         <head>
     <style>
         table {
