--- a/register.html
+++ b/register.html
@@ -7,58 +7,10 @@
     <title>Registrations</title>
 
     <link rel="stylesheet" href="./assets/styles-register.css">
-
-</head>
-
-<body>
-    <!-- Header -->
-     <header class="navbar">
-        <div class="container">
-            <a href="/" class="logo">
-                <img src="./assets/synthacks_logo-transparent.png" alt="logo">
-                <span>GWH SYNTHACKS 2024</span>
-            </a>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li>
-                        <a href="./rules.html">Rules and Regulations</a>
-                    </li>
-                    <li>
-                        <a href="./register.html">Registrations</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="./about.html">
-                            <span>About</span>
-                            <i class="fa-solid fa-angle-down"></i>
-                        </a>
-                        <div class="dropdown-cont">
-                            <ul>
-                                <li>
-                                    <a href="./members.html">OC Members</a>
-                                </li>
-                                <li>
-                                    <a href="./schedule.html">Event Schedule</a>
-                                </li>
-                                <li>
-                                    <a href="./album.html">Album</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <section class="body">
-        <h1>Registrations</h1>
-        <h2> Eligibility Criteria and Age Categories</h2> 
-        <head>
     <style>
         table {
             width: 30%;
+            margin: auto; /* Center the table */
             border-collapse: collapse;
         }
         table, th, td {
@@ -68,23 +20,74 @@
             padding: 15px;
             text-align: center;
         }
+        .btn-purple {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background-color: #6a1b9a;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .btn-purple:hover {
+            background-color: #4a0072;
+        }
     </style>
 </head>
-<body>
 
-<table>
-    <tr>
-        <td>Junior Category</td>
-        <td>6th - 8th</td>
-    </tr>
-    <tr>
-        <td>Senior Category</td>
-        <td>9th - 12th</td>
-    </tr>
-</table>
+<body>
+    <!-- Header -->
+    <header class="navbar">
+        <div class="container">
+            <a href="/" class="logo">
+                <img src="./assets/synthacks_logo-transparent.png" alt="logo">
+                <span>GWH SYNTHACKS 2024</span>
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="./rules.html">Rules and Regulations</a></li>
+                    <li><a href="./register.html">Registrations</a></li>
+                    <li class="dropdown">
+                        <a href="./about.html">
+                            <span>About</span>
+                            <i class="fa-solid fa-angle-down"></i>
+                        </a>
+                        <div class="dropdown-cont">
+                            <ul>
+                                <li><a href="./members.html">OC Members</a></li>
+                                <li><a href="./schedule.html">Event Schedule</a></li>
+                                <li><a href="./album.html">Album</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Main Content -->
+    <section class="body">
+        <h1>Registrations</h1>
+        <h2>Eligibility Criteria and Age Categories</h2> 
+
+        <table>
+            <tr>
+                <td>Junior Category</td>
+                <td>6th - 8th</td>
+            </tr>
+            <tr>
+                <td>Senior Category</td>
+                <td>9th - 12th</td>
+            </tr>
+        </table>
+
         <h3>Click the link below to start the registration process:</h3>
         <button class="btn-purple" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScHq3qfrm86HIcKmuWbU_1-YxDDS8D9mvYYKJmU_ldiM7Rk3g/viewform'">Register Now!</button>
     </section>
+
     <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
     <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
 </body>
