--- a/register.html
+++ b/register.html
@@ -10,9 +10,8 @@
     <style>
         table {
             width: 30%;
-            margin: 0 auto; /* Center the table */
+            margin: auto; /* Center the table */
             border-collapse: collapse;
-            margin-top: 10px; /* Reduce the top margin to move it closer to the heading */
         }
         table, th, td {
             border: 1px solid black;
