--- a/register.html
+++ b/register.html
@@ -1,3 +1,5 @@
+
+Copy code
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,8 +12,9 @@
     <style>
         table {
             width: 30%;
-            margin: auto; /* Center the table */
+            margin: 0 auto; /* Center the table */
             border-collapse: collapse;
+            margin-top: -10px; /* Move the table up by 10px */
         }
         table, th, td {
             border: 1px solid black;
