--- a/register.html
+++ b/register.html
@@ -1,5 +1,3 @@
-
-Copy code
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,9 +10,8 @@ Copy code
     <style>
         table {
             width: 30%;
-            margin: 0 auto; /* Center the table */
+            margin: auto; /* Center the table */
             border-collapse: collapse;
-            margin-top: -10px; /* Move the table up by 10px */
         }
         table, th, td {
             border: 1px solid black;
