--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="./rules.html">Rules and Regulations</a>
+                        <a href="./rules.html">About</a>
                     </li>
                     <li>
                         <a href="./register.html">Registrations</a>
