--- a/register.html
+++ b/register.html
@@ -48,7 +48,7 @@
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="./rules.html">Rules and Regulations</a></li>
+                    <li><a href="./rules.html">About</a></li>
                     <li><a href="./register.html">Registrations</a></li>
                     <li class="dropdown">
                         <a href="./about.html">
