--- a/rules.html
+++ b/rules.html
@@ -53,19 +53,8 @@
         </div>
     </header>
     <div class="rules-content">
-        <h2>Hackathon Rules</h2>
-            <h3>Rule 1: Technology Choice</h3>
-            <p>The participants can create their project using any technology they want including but not limited to: Machine learning, AI, App development, IoT, Robotics etc.</p>
-            <h3>Rule 2: Hardware Components</h3>
-            <p>If hardware components are being used, the participants must procure the required equipment themselves.</p>
-            <h3>Rule 3: API Usage</h3>
-            <p>Usage of any paid API is not permitted.</p>
-            <h3>Rule 4: Prewritten Code</h3>
-            <p>Participants will not be allowed to use any prewritten code.</p>
-            <h3>Rule 5: Plagiarism</h3>
-            <p>Plagiarism is not allowed in any case; it will cause the entire team to be disqualified.</p>
-            <h3>Rule 6: Project Work</h3>
-            <p>Participants WILL NOT be allowed to work on their projects before the competition.</p>
+        <h2>About SyntHacks</h2>
+            <p>SyntHacks is the annual hackathon hosted by Greenwood High, serving as a platform for students to showcase their coding skills and innovative thinking. Each year, participants are challenged with unique themes that inspire creativity and problem-solving. During the hackathon, students work tirelessly to develop both software and hardware solutions, leveraging their technical knowledge and teamwork. Synthacks not only highlights the talent and ingenuity of our students but also fosters a collaborative environment where learning and innovation thrive. It has become a cornerstone event for our school's tech community, embodying the spirit of innovation and excellence that Greenwood High stands for.</p>
     </div>
     <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
     <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
