--- a/rules.html
+++ b/rules.html
@@ -8,11 +8,37 @@
 
     <link rel="stylesheet" href="./assets/styles-rules.css">
 
+    <style>
+        .themes-content {
+            padding: 2rem;
+            text-align: center;
+            background-color: #f4f4f9;
+            margin: 2rem 0;
+        }
+        .themes-content h2 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+        .themes-content .theme-item {
+            background: #fff;
+            padding: 1rem;
+            margin: 1rem;
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .theme-item h3 {
+            margin-bottom: 0.5rem;
+            font-size: 1.5rem;
+        }
+        .theme-item p {
+            font-size: 1rem;
+        }
+    </style>
 </head>
 
 <body>
     <!-- Header -->
-     <header class="navbar">
+    <header class="navbar">
         <div class="container">
             <a href="/" class="logo">
                 <img src="./assets/synthacks_logo-transparent.png" alt="logo">
@@ -54,8 +80,29 @@
     </header>
     <div class="rules-content">
         <h2>About SyntHacks</h2>
-            <p>SyntHacks is the annual hackathon hosted by Greenwood High, serving as a platform for students to showcase their coding skills and innovative thinking. Each year, participants are challenged with unique themes that inspire creativity and problem-solving. During the hackathon, students work tirelessly to develop both software and hardware solutions, leveraging their technical knowledge and teamwork. Synthacks not only highlights the talent and ingenuity of our students but also fosters a collaborative environment where learning and innovation thrive. It has become a cornerstone event for our school's tech community, embodying the spirit of innovation and excellence that Greenwood High stands for.</p>
+        <p>SyntHacks is the annual intraschool hackathon hosted by Greenwood High, serving as a platform for students to showcase their coding skills and innovative thinking. Each year, participants are challenged with unique themes that inspire creativity and problem-solving. During the hackathon, students work tirelessly to develop both software and hardware solutions, leveraging their technical knowledge and teamwork. Synthacks not only highlights the talent and ingenuity of our students but also fosters a collaborative environment where learning and innovation thrive. It has become a cornerstone event for our school's tech community, embodying the spirit of innovation and excellence that Greenwood High stands for.</p>
     </div>
+
+    <div class="themes-content">
+        <h2>Themes for 2024</h2>
+        <div class="theme-item">
+            <h3>1. Artificial Intelligence</h3>
+            <p>Innovate with AI to create solutions that can revolutionize industries or improve everyday life.</p>
+        </div>
+        <div class="theme-item">
+            <h3>2. Environmental Sustainability</h3>
+            <p>Develop projects that address environmental issues and promote sustainability practices.</p>
+        </div>
+        <div class="theme-item">
+            <h3>3. Health and Wellness</h3>
+            <p>Create technology-driven solutions to enhance health and well-being for individuals and communities.</p>
+        </div>
+        <div class="theme-item">
+            <h3>4. Education Technology</h3>
+            <p>Design tools and platforms to improve learning experiences and educational outcomes.</p>
+        </div>
+    </div>
+
     <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
     <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
 </body>
