--- a/rules.html
+++ b/rules.html
@@ -64,16 +64,12 @@
             <p>Explore the realms of AI and ML to create innovative solutions that can revolutionize industries and improve everyday life.</p>
         </div>
         <div class="theme-box">
-            <h3>Theme 2: Environmental Sustainability</h3>
-            <p>Develop projects aimed at tackling environmental issues, promoting sustainability, and making a positive impact on the planet.</p>
+            <h3>Theme 2: Sustainable Technology</h3>
+            <p>Develop technology that promotes environmental sustainability and helps address pressing ecological challenges.</p>
         </div>
         <div class="theme-box">
-            <h3>Theme 3: Health and Wellness</h3>
-            <p>Innovate in the field of health and wellness to enhance healthcare systems, improve patient care, and promote healthy living.</p>
-        </div>
-        <div class="theme-box">
-            <h3>Theme 4: Smart Cities</h3>
-            <p>Create solutions for smart cities that enhance urban living through technology, improving infrastructure, and quality of life.</p>
+            <h3>Theme 3: Healthcare Innovation</h3>
+            <p>Design and build solutions that can enhance healthcare delivery, improve patient outcomes, and make healthcare more accessible.</p>
         </div>
     </div>
     
