--- a/rules.html
+++ b/rules.html
@@ -60,7 +60,7 @@
     <div class="themes-content">
         <h2>Themes for 2024</h2>
         <div class="theme-box">
-            <h3>Theme 1: Artificial Intelligence and Machine Learning</h3>
+            <h3>Theme 1: Tourism Technologyy</h3>
             <p>Explore the realms of AI and ML to create innovative solutions that can revolutionize industries and improve everyday life.</p>
         </div>
         <div class="theme-box">
@@ -70,6 +70,22 @@
         <div class="theme-box">
             <h3>Theme 3: Healthcare Innovation</h3>
             <p>Design and build solutions that can enhance healthcare delivery, improve patient outcomes, and make healthcare more accessible.</p>
+        </div>
+        <div class="theme-box">
+            <h3>Theme 4: Fintech</h3>
+            <p>Explore the realms of AI and ML to create innovative solutions that can revolutionize industries and improve everyday life.</p>
+        </div>
+        <div class="theme-box">
+            <h3>Theme 5: Learning Innovation</h3>
+            <p>Explore the realms of AI and ML to create innovative solutions that can revolutionize industries and improve everyday life.</p>
+        </div>
+        <div class="theme-box">
+            <h3>Theme 6: Transit Technology</h3>
+            <p>Explore the realms of AI and ML to create innovative solutions that can revolutionize industries and improve everyday life.</p>
+        </div>
+        <div class="theme-box">
+            <h3>Theme 7: Cybersecurity</h3>
+            <p>Explore the realms of AI and ML to create innovative solutions that can revolutionize industries and improve everyday life.</p>
         </div>
     </div>
     
