--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div class="dropdown-cont">
                             <ul>
                                 <li>
-                                    <a href="./members.html">OC Members</a>
+                                    <a href="./oc.html">OC Members</a>
                                 </li>
                                 <li>
                                     <a href="./schedule.html">Event Schedule</a>
