--- a/album.html
+++ b/album.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GWH SYNTHACKS 2024</title>
+
+    <!-- SwiperJS CSS CDN (Content Delivery Network) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./assets/styles.css">
+
+    <!-- Simply Countdown CSS -->
+     <link href="./assets/simplyCountdown.theme.default.css">
+
+</head>
+<body>
+    <!-- Header -->
+    <header class="navbar">
+        <div class="container">
+            <a href="/" class="logo">
+                <img src="./assets/synthacks_logo-transparent.png" alt="logo">
+                <span>GWH SYNTHACKS 2024</span>
+            </a>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="./rules.html">About</a>
+                    </li>
+                    <li>
+                        <a href="./register.html">Registrations</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="./about.html">
+                            <span>About</span>
+                            <i class="fa-solid fa-angle-down"></i>
+                        </a>
+                        <div class="dropdown-cont">
+                            <ul>
+                                <li>
+                                    <a href="./oc.html">OC Members</a>
+                                </li>
+                                <li>
+                                    <a href="./schedule.html">Event Schedule</a>
+                                </li>
+                                <li>
+                                    <a href="./album.html">Album</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+</body>
+</html>
