--- a/rules.html
+++ b/rules.html
@@ -51,6 +51,17 @@
             </nav>
         </div>
     </header>
+
+    <section class="hero-section">
+        <div class="container">
+            <video src="./assets/hero-bg.mp4" autoplay muted loop></video>
+            <img src="./assets/synthacks_logo-transparent.png" alt="">
+            <p>SyntHacks is the annual intraschool hackathon hosted by Greenwood High, serving as a platform for students to showcase their coding skills and innovative thinking. Each year, participants are challenged with unique themes that inspire creativity and problem-solving.</p>
+            <p>During the hackathon, students work tirelessly to develop both software and hardware solutions, leveraging their technical knowledge and teamwork. Synthacks not only highlights the talent and ingenuity of our students but also fosters a collaborative environment where learning and innovation thrive. 
+            <p>It has become a cornerstone event for our school's tech community, embodying the spirit of innovation and excellence that Greenwood High stands for.</p>
+        </div>
+    </section>
+    
     <div class="rules-content">
         <h2>About SyntHacks</h2>
         <video src="./assets/hero-bg.mp4" autoplay muted loop></video>
@@ -88,6 +99,16 @@
     
     <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
     <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
-</body>
 
+    <!-- Footer -->
+    <footer class="container-fluid">
+        <div class="container">
+            <img src="./assets/synthacks_logo-transparent.png" alt="">
+            <h4>Location</h4>
+            <a href="https://maps.app.goo.gl/W2hDSP2TAAW525nR7">Greenwood High School Sarjapur</a>
+            <h4>Contact</h4>
+            <p>Event Head - <a href="mailto:shlok023079@greenwoodhigh.edu.in">shlok023079@greenwoodhigh.edu.in</a></p>
+        </div>
+    </footer>
+</body>
 </html>
