--- a/rules.html
+++ b/rules.html
@@ -30,7 +30,7 @@
                     </li>
                     <li class="dropdown">
                         <a href="./about.html">
-                            <span>About</span>
+                            <span>More</span>
                             <i class="fa-solid fa-angle-down"></i>
                         </a>
                         <div class="dropdown-cont">
