--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a href="./register.html">Registrations</a>
                     </li>
                     <li class="dropdown">
-                        <a href="./about.html">
+                        <a href="">
                             <span>More</span>
                             <i class="fa-solid fa-angle-down"></i>
                         </a>
