--- a/register.html
+++ b/register.html
@@ -51,8 +51,8 @@
                     <li><a href="./rules.html">About</a></li>
                     <li><a href="./register.html">Registrations</a></li>
                     <li class="dropdown">
-                        <a href="./about.html">
-                            <span>About</span>
+                        <a href="#">
+                            <span>More</span>
                             <i class="fa-solid fa-angle-down"></i>
                         </a>
                         <div class="dropdown-cont">
