--- a/schedule.html
+++ b/schedule.html
@@ -36,8 +36,8 @@
                         <a href="./register.html">Registrations</a>
                     </li>
                     <li class="dropdown">
-                        <a href="./about.html">
-                            <span>About</span>
+                        <a href="#">
+                            <span>More</span>
                             <i class="fa-solid fa-angle-down"></i>
                         </a>
                         <div class="dropdown-cont">
