--- a/album.html
+++ b/album.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/">Home</a>
+                        <a href="./index.html">Home</a>
                     </li>
                     <li>
                         <a href="./rules.html">About</a>
