--- a/register.html
+++ b/register.html
@@ -88,6 +88,17 @@
         <button class="btn-purple" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScHq3qfrm86HIcKmuWbU_1-YxDDS8D9mvYYKJmU_ldiM7Rk3g/viewform'">Register Now!</button>
     </section>
 
+     <!-- Footer-->
+    <footer class="container-fluid">
+        <div class="container">
+            <img src="./assets/synthacks_logo-transparent.png" alt="">
+            <h4>Location</h4>
+            <a href="https://maps.app.goo.gl/W2hDSP2TAAW525nR7">Greenwood High School Sarjapur</a>
+            <h4>Contact</h4>
+            <p>Event Head - <a href="mailto:shlok023079@greenwoodhigh.edu.in">shlok023079@greenwoodhigh.edu.in</a></p>
+        </div>
+    </footer>
+
     <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
     <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
 </body>
