--- a/register.html
+++ b/register.html
@@ -84,6 +84,8 @@
             </tr>
         </table>
 
+        <p>Registration Form for Synthacks 2024. Registrations close on 7th August, 2024 at 9:30 p.m., so please ensure you register as soon as possible!</p>
+        
         <h3>Click the link below to start the registration process:</h3>
         <button class="btn-purple" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScHq3qfrm86HIcKmuWbU_1-YxDDS8D9mvYYKJmU_ldiM7Rk3g/viewform'">Register Now!</button>
     </section>
