--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
     <style>
         table {
             width: 30%;
-            margin: auto; /* Center the table */
+            margin: 32px 0;
             border-collapse: collapse;
         }
         table, th, td {
@@ -33,6 +33,10 @@
         }
         .btn-purple:hover {
             background-color: #4a0072;
+        }
+
+        .bg-color{
+            background-color: red;
         }
     </style>
 </head>
@@ -70,7 +74,7 @@
 
     <!-- Main Content -->
     <section class="body">
-        <h1>Registrations</h1>
+        <h1 class="font-md">Registrations</h1>
         <h2>Eligibility Criteria and Age Categories</h2> 
 
         <table>
@@ -84,9 +88,9 @@
             </tr>
         </table>
 
-        <p class="info">Registration Form for Synthacks 2024. Registrations close on 7th August, 2024 at 9:30 p.m., so please ensure you register as soon as possible!</p>
+        <p class="font-md info">Registration Form for Synthacks 2024. Registrations close on 7th August, 2024 at 9:30 p.m., so please ensure you register as soon as possible!</p>
         
-        <h3>Click the link below to start the registration process:</h3>
+        <h3 class="font-md">Click the link below to start the registration process:</h3>
         <button class="btn-purple" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScHq3qfrm86HIcKmuWbU_1-YxDDS8D9mvYYKJmU_ldiM7Rk3g/viewform'">Register Now!</button>
     </section>
 
