--- a/register.html
+++ b/register.html
@@ -8,7 +8,33 @@
 
     <link rel="stylesheet" href="./assets/styles-register.css">
     <style>
-       
+       table {
+            width: 30%;
+            margin: 0 auto; /* Center the table */
+            border-collapse: collapse;
+            margin-top: -10px; /* Move the table up by 10px */
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 15px;
+            text-align: center;
+        }
+        .btn-purple {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background-color: #6a1b9a;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .btn-purple:hover {
+            background-color: #4a0072;
+        }
     </style>
 </head>
 
