--- a/members.html
+++ b/members.html
@@ -13,10 +13,13 @@
     <link rel="stylesheet" href="./assets/styles.css">
 
     <!-- Simply Countdown CSS -->
-     <link href="./assets/simplyCountdown.theme.default.css">
+    <link href="./assets/simplyCountdown.theme.default.css">
 
 </head>
 <body>
+    <!-- Title -->
+    <h1 style="text-align: center; margin-top: 20px;">OC Members</h1>
+
     <!-- Header -->
     <header class="navbar">
         <div class="container">
@@ -60,4 +63,3 @@
     </header>
 </body>
 </html>
-
