--- a/members.html
+++ b/members.html
@@ -17,9 +17,6 @@
 
 </head>
 <body>
-    <!-- Title -->
-    <h1 style="text-align: center; margin-top: 20px;">OC Members</h1>
-
     <!-- Header -->
     <header class="navbar">
         <div class="container">
@@ -61,5 +58,22 @@
             </nav>
         </div>
     </header>
+
+    <!-- Title -->
+    <div class="title-container">
+        <h1>OC Members</h1>
+    </div>
+
+    <style>
+        .title-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .title-container h1 {
+            font-family: 'Raleway', sans-serif;
+            color: white;
+        }
+    </style>
 </body>
 </html>
