--- a/members.html
+++ b/members.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GWH SYNTHACKS 2024</title>
-
+    <title>GWH SYNTHACKS 2024 - OC Members</title>
     <!-- SwiperJS CSS CDN (Content Delivery Network) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/styles.css">
-
+    <link rel="stylesheet" href="./assets/styles-members.css">
     <!-- Simply Countdown CSS -->
     <link href="./assets/simplyCountdown.theme.default.css">
-
 </head>
 <body>
     <!-- Header -->
@@ -64,16 +60,20 @@
         <h1>OC Members</h1>
     </div>
 
-    <style>
-        .title-container {
-            text-align: center;
-            margin-top: 20px;
-        }
+    <!-- OC Members Section -->
+    <section class="oc-members">
+        <div class="container">
+            <div class="member">
+                <img src="./assets/oc-member1.jpg" alt="OC Member Name">
+                <h3>Shlok Rajiv</h3>
+                <p>Event Head</p>
+            </div>
+            <!-- Add more member divs as needed -->
+        </div>
+    </section>
 
-        .title-container h1 {
-            font-family: 'Raleway', sans-serif;
-            color: white;
-        }
-    </style>
+    <!-- You may want to add a footer here if your other pages have one -->
+
+    <!-- Any additional scripts -->
 </body>
 </html>
