--- a/members.html
+++ b/members.html
@@ -68,6 +68,11 @@
                 <h3>Shlok Rajiv</h3>
                 <p>Event Head</p>
             </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Arjun Jagannathan</h3>
+                <p>Technology Head</p>
+            </div>
             <!-- Add more member divs as needed -->
         </div>
     </section>
