--- a/members.html
+++ b/members.html
@@ -64,7 +64,7 @@
     <section class="oc-members">
         <div class="container">
             <div class="member">
-                <img src="./assets/image_2024-07-17_143101442.png" alt="OC Member Name">
+                <img src="./assets/member1.png" alt="OC Member Name">
                 <h3>Shlok Rajiv</h3>
                 <p>Event Head</p>
             </div>
