--- a/members.html
+++ b/members.html
@@ -73,6 +73,11 @@
                 <h3>Arjun Jagannathan</h3>
                 <p>Technology Head</p>
             </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Siddharth Chopra</h3>
+                <p>Judging Head</p>
+            </div>
             <!-- Add more member divs as needed -->
         </div>
     </section>
