--- a/members.html
+++ b/members.html
@@ -71,12 +71,77 @@
             <div class="member">
                 <img src="./assets/" alt="OC Member Name">
                 <h3>Arjun Jagannathan</h3>
-                <p>Technology Head</p>
+                <p>Head of Technology</p>
             </div>
             <div class="member">
                 <img src="./assets/" alt="OC Member Name">
                 <h3>Siddharth Chopra</h3>
-                <p>Judging Head</p>
+                <p>Head of Judging</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Rishabh Girish</h3>
+                <p>Head of Website Development</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Keshav Pillarisetti</h3>
+                <p>Head of Website Development</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Samiksha Sahu</h3>
+                <p>Head of Social Media</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Akkanksha Tammana</h3>
+                <p>Head of Social Media</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Shreya Seshadri</h3>
+                <p>Head of Registrations</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Rohit Aromal</h3>
+                <p>Head of Logistics</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Aaron Joseph</h3>
+                <p>Head of Logistics</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Vishruth Jasti</h3>
+                <p>Head of Resources</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Shubhan Jain</h3>
+                <p>Head of Resources</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Thanvi Krishnamurthy</h3>
+                <p>Head of Photography</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Maayan Hazra</h3>
+                <p>Head of Auditing</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Palak Gupta</h3>
+                <p>Head of Design</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
+                <h3>Ananya Vashishth</h3>
+                <p>Head of Communications</p>
             </div>
             <!-- Add more member divs as needed -->
         </div>
