--- a/members.html
+++ b/members.html
@@ -84,7 +84,7 @@
                 <p>Head of Website Development</p>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/member2.jpeg" alt="OC Member Name">
                 <h3>Keshav Pillarisetti</h3>
                 <p>Head of Website Development</p>
             </div>
