--- a/members.html
+++ b/members.html
@@ -110,6 +110,11 @@
             </div>
             <div class="member">
                 <img src="./assets/" alt="OC Member Name">
+                <h3>Simon Patel</h3>
+                <p>Head of Registrations</p>
+            </div>
+            <div class="member">
+                <img src="./assets/" alt="OC Member Name">
                 <h3>Rohit Aromal</h3>
                 <p>Head of Logistics</p>
             </div>
