--- a/members.html
+++ b/members.html
@@ -64,7 +64,7 @@
     <section class="oc-members">
         <div class="container">
             <div class="member">
-                <img src="./assets/member1.png" alt="OC Member Name">
+                <img src="./assets/shlok.png" alt="OC Member Name">
                 <h3>Shlok Rajiv</h3>
                 <p>Event Head</p>
             </div>
@@ -89,7 +89,7 @@
                 <p>Head of Website Development</p>
             </div>
             <div class="member">
-                <img src="./assets/member2.jpeg" alt="OC Member Name">
+                <img src="./assets/keshav.jpeg" alt="OC Member Name">
                 <h3>Keshav Pillarisetti</h3>
                 <p>Head of Website Development</p>
             </div>
@@ -104,17 +104,17 @@
                 <p>Head of Social Media</p>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/shreya.jpeg" alt="OC Member Name">
                 <h3>Shreya Seshadri</h3>
                 <p>Head of Registrations</p>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/simon.jpeg" alt="OC Member Name">
                 <h3>Simon Patel</h3>
                 <p>Head of Registrations</p>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/rohit.jpeg" alt="OC Member Name">
                 <h3>Rohit Aromal</h3>
                 <p>Head of Logistics</p>
             </div>
@@ -124,7 +124,7 @@
                 <p>Head of Logistics</p>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/vishruth.jpeg" alt="OC Member Name">
                 <h3>Vishruth Jasti</h3>
                 <p>Head of Resources</p>
             </div>
@@ -144,7 +144,7 @@
                 <p>Head of Design</p>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/ananya.jpeg" alt="OC Member Name">
                 <h3>Ananya Vashishth</h3>
                 <p>Head of Communications</p>
             </div>
