--- a/members.html
+++ b/members.html
@@ -75,12 +75,12 @@
                 <p>Head of Technology</p>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/siddharth.jpeg" alt="OC Member Name">
                 <h3>Siddharth Chopra</h3>
                 <p>Head of Judging</p>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/maayan.jpeg" alt="OC Member Name">
                 <h3>Maayan Hazra</h3>
                 <p>Head of Auditing</p>
             </div>
@@ -100,7 +100,7 @@
                 <p>Head of Social Media</p>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/akkanksha.jpeg" alt="OC Member Name">
                 <h3>Akkanksha Tammana</h3>
                 <p>Head of Social Media</p>
             </div>
