--- a/members.html
+++ b/members.html
@@ -67,7 +67,7 @@
                 <img src="./assets/shlok.png" alt="OC Member Name">
                 <h3>Shlok Rajiv</h3>
                 <p>Event Head</p>
-                <a href="mailto:shlok023079@greenwoodhigh.edu.in">E-mail</a>
+                <a href="mailto:shlok023079@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/" alt="OC Member Name">
