--- a/members.html
+++ b/members.html
@@ -70,7 +70,7 @@
                 <a href="mailto:shlok023079@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/arjun.webp" alt="OC Member Name">
                 <h3>Arjun Jagannathan</h3>
                 <p>Head of Technology</p>
             </div>
