--- a/members.html
+++ b/members.html
@@ -22,15 +22,9 @@
             </a>
             <nav>
                 <ul>
-                    <li>
-                        <a href="./index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="./rules.html">About</a>
-                    </li>
-                    <li>
-                        <a href="./register.html">Registrations</a>
-                    </li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="./rules.html">About</a></li>
+                    <li><a href="./register.html">Registrations</a></li>
                     <li class="dropdown">
                         <a href="#">
                             <span>More</span>
@@ -38,15 +32,9 @@
                         </a>
                         <div class="dropdown-cont">
                             <ul>
-                                <li>
-                                    <a href="./members.html">OC Members</a>
-                                </li>
-                                <li>
-                                    <a href="./schedule.html">Event Schedule</a>
-                                </li>
-                                <li>
-                                    <a href="./album.html">Album</a>
-                                </li>
+                                <li><a href="./members.html">OC Members</a></li>
+                                <li><a href="./schedule.html">Event Schedule</a></li>
+                                <li><a href="./album.html">Album</a></li>
                             </ul>
                         </div>
                     </li>
